--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.451.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
